# blog-api

./: .env.example  .env.test.example  .gitignore  pyproject.toml  pytest.ini  setup.cfg
app/: settings.py
locations/: controller.py  helpers.py  models.py
src/app/: settings.py  urls.py
src/locations/: controller.py  models.py  serializer.py  services.py  urls.py
src/openapi/: view.py
tests/locations/: controller_test.py  factory.py  model_test.py  services_test.py
