[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Jesús Díaz <jadiaz.inf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
dj-database-url = "^2.3.0"
psycopg-binary = "^3.2.4"
drf-yasg = "^1.21.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-env = "^1.1.5"
factory-boy = "^3.3.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
